# WalshAI

./: .env  .env.example  .replit  README.md  ai_models.py  bot_handlers.py  communication_tools.py  companies_house_api.py  config.py  csv_exporter.py  data_generators.py  deepseek_client.py  main.py  pyproject.toml  replit.md  run_bot.bat  start_bot.bat  web_dashboard.py
templates/: dashboard.html
