[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[all]==20.7",
    "requests>=2.32.4",
    "telegram>=0.0.1",
    "urllib3>=2.5.0",
]
